@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2005-2018, Douglas Gilbert
+ * Copyright (c) 2005-2019, Douglas Gilbert
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -440,37 +440,6 @@ struct sdparm_mode_page_item sdparm_mitem_arr[] = {
     {"LBAS", MRW_MP, 0, PDT_MMC, 3, 0, 1, 0,
         "LBA space", NULL},
 
-    /* Flexible disk mode page [0x5] sbc (obsolete by sbc2r11) */
-    {"XRATE", FLEX_DISK_MP, 0, PDT_DISK, 2, 7, 16, 0,
-        "Transfer rate", NULL},
-    {"NUM_HD", FLEX_DISK_MP, 0, PDT_DISK, 4, 7, 8, 0,
-        "Number of heads", NULL},
-    {"SECT_TR", FLEX_DISK_MP, 0, PDT_DISK, 5, 7, 8, 0,
-        "Sectors per track", NULL},
-    {"BYTE_SECT", FLEX_DISK_MP, 0, PDT_DISK, 6, 7, 16, 0,
-        "Bytes per sector", NULL},
-    {"NUM_CYL", FLEX_DISK_MP, 0, PDT_DISK, 8, 7, 16, 0,
-        "Number of cylinders", NULL},
-    /* Surely the rest (starting with 'write precompensation') are no
-     * longer used. Some USB mass storage devices (flash) use this mpage. */
-
-    /* Notch and partition mode page [0xc] sbc2 (obsolete in sbc2r14) */
-    {"ND", NOTCH_MP, 0, PDT_DISK, 2, 7, 1, 0,
-        "Notched device", NULL},
-    {"LPN", NOTCH_MP, 0, PDT_DISK, 2, 6, 1, 0,
-        "Logical or physical notch", "0: physical; 1: logical"},
-    {"MNN", NOTCH_MP, 0, PDT_DISK, 4, 7, 16, 0,
-        "Maximum number of notches", NULL},
-    {"ANOT", NOTCH_MP, 0, PDT_DISK, 6, 7, 16, 0,
-        "Active notch", "origin 1, 0 for all"},
-    {"SBOU", NOTCH_MP, 0, PDT_DISK, 8, 7, 32, MF_HEX,
-        "Starting boundary", NULL},
-    {"EBOU", NOTCH_MP, 0, PDT_DISK, 12, 7, 32, MF_HEX,
-        "Ending boundary", NULL},
-    {"PNOT", NOTCH_MP, 0, PDT_DISK, 16, 7, 64, MF_HEX,
-        "Pages notched",
-        "bit map of mpages altered by notching\tMSb: mpage 0x3f"},
-
     /* Rigid disk mode page [0x4] sbc2 (obsolete) */
     {"NOC", RIGID_DISK_MP, 0, PDT_DISK, 2, 7, 24, 0,
         "Number of cylinders", NULL},
@@ -490,6 +459,20 @@ struct sdparm_mode_page_item sdparm_mitem_arr[] = {
         "Rotational offset", NULL},
     {"MRR", RIGID_DISK_MP, 0, PDT_DISK, 20, 7, 16, 0,
         "Medium rotation rate (rpm)", NULL},
+
+    /* Flexible disk mode page [0x5] sbc (obsolete by sbc2r11) */
+    {"XRATE", FLEX_DISK_MP, 0, PDT_DISK, 2, 7, 16, 0,
+        "Transfer rate", NULL},
+    {"NUM_HD", FLEX_DISK_MP, 0, PDT_DISK, 4, 7, 8, 0,
+        "Number of heads", NULL},
+    {"SECT_TR", FLEX_DISK_MP, 0, PDT_DISK, 5, 7, 8, 0,
+        "Sectors per track", NULL},
+    {"BYTE_SECT", FLEX_DISK_MP, 0, PDT_DISK, 6, 7, 16, 0,
+        "Bytes per sector", NULL},
+    {"NUM_CYL", FLEX_DISK_MP, 0, PDT_DISK, 8, 7, 16, 0,
+        "Number of cylinders", NULL},
+    /* Surely the rest (starting with 'write precompensation') are no
+     * longer used. Some USB mass storage devices (flash) use this mpage. */
 
     /* Write parameters mode page [0x5] mmc5 */
     {"BUFE", WRITE_PARAM_MP, 0, PDT_MMC, 2, 6, 1, MF_COMMON,
@@ -820,6 +803,23 @@ struct sdparm_mode_page_item sdparm_mitem_arr[] = {
         "Ultra DMA bit 1", NULL},
     {"UDMA0", CONTROL_MP, MSP_SAT_PATA, -1, 5, 0, 1, 0,
         "Ultra DMA bit 0", NULL},
+
+    /* Notch and partition mode page [0xc] sbc2 (obsolete in sbc2r14) */
+    {"ND", NOTCH_MP, 0, PDT_DISK, 2, 7, 1, 0,
+        "Notched device", NULL},
+    {"LPN", NOTCH_MP, 0, PDT_DISK, 2, 6, 1, 0,
+        "Logical or physical notch", "0: physical; 1: logical"},
+    {"MNN", NOTCH_MP, 0, PDT_DISK, 4, 7, 16, 0,
+        "Maximum number of notches", NULL},
+    {"ANOT", NOTCH_MP, 0, PDT_DISK, 6, 7, 16, 0,
+        "Active notch", "origin 1, 0 for all"},
+    {"SBOU", NOTCH_MP, 0, PDT_DISK, 8, 7, 32, MF_HEX,
+        "Starting boundary", NULL},
+    {"EBOU", NOTCH_MP, 0, PDT_DISK, 12, 7, 32, MF_HEX,
+        "Ending boundary", NULL},
+    {"PNOT", NOTCH_MP, 0, PDT_DISK, 16, 7, 64, MF_HEX,
+        "Pages notched",
+        "bit map of mpages altered by notching\tMSb: mpage 0x3f"},
 
     /* Power condition mode page: poo, obsolete block-device-only version */
     /*   [0xd] sbc (replacement page now at 0x1a) */
@@ -1759,6 +1759,18 @@ static struct sdparm_mode_page_item sdparm_mitem_sas_arr[] = {
         "Power loss timeout(ms)", NULL},
     {"PGRATO", PROT_SPEC_PORT_MP, MSP_SAS_SPC, -1, 9, 7, 8, 0,
         "Power grant timeout(sec)", NULL},
+    {"4PHYS", PROT_SPEC_PORT_MP, MSP_SAS_SPC, -1, 10, 2, 1, 0,
+        "4 phy wide port(s) when set", "If more than 4 phys, group adjacent "
+        "(by phy id) phys"},     /* 18-0117r3 */
+    {"2PHYS", PROT_SPEC_PORT_MP, MSP_SAS_SPC, -1, 10, 1, 1, 0,
+        "2 phy wide port(s) when set", "If more than 2 phys, group adjacent "
+        "(by phy id) phys"},
+    {"1PHY", PROT_SPEC_PORT_MP, MSP_SAS_SPC, -1, 10, 0, 1, 0,
+        "single phy (narrow) ports", "Each phy is a SCSI port with own SAS "
+        "address"},
+    {"PMCDT", PROT_SPEC_PORT_MP, MSP_SAS_SPC, -1, 11, 7, 8, 0,
+        "port mode change delay time (unit: seconds)", "Minimum time device "
+        "remains offline after change"},    /* end of 18-0117r3 addition */
 
     /* SAS-2 Enhanced phy mode page [0x19,0x3] sas/spl */
     {"PPID_3", PROT_SPEC_PORT_MP, MSP_SAS_E_PHY, -1, 5, 3, 4, 0,
