@@ -2,11 +2,13 @@ The version number is hardcoded into sdparm.c (in a C string);
 the rpm spec file: sdparm.spec ; the debian/changelog file;
 and the configure.ac file (in the AC_INIT item).
 
-ChangeLog for sdparm-1.11 [20190114] [svn: r324]
+ChangeLog for sdparm-1.11 [20190118] [svn: r325]
   - add --out_mask=OM option for mode page control
     bitmask (current, changeable, default and/or saveable)
   - add --examine option to iterate over mode+vpd pages
   - add Out of band management control mpage (spl5r01)
+  - expand SAS configure port mode page [0x19,0x2] with
+    configure port mode fields (18-117r3)
   - accept additional tansport acronyms (e.g. ib for srp)
   - power condition mpage: rename fields IDLE->IDLE_A;
     STANDBY->STANDBY_Z; ICT->IACT and SCT->SZCT
@@ -28,7 +30,7 @@ ChangeLog for sdparm-1.11 [20190114] [svn: r324]
   - --wscan option: expand bus type to include NVMe
   - mode page output with -HHH suitable for --inhex=
   - add flexible geometery page (obsolete) sbc2r00
-  - point svn:externals to rev 806 of sg3_utils
+  - point svn:externals to rev 807 of sg3_utils
   - convert many two valued 'int's to bool
   - shellcheck corrections on scripts
   - upgrade automake to version 1.15 (U16.04)
